--- a/sample-order-service/order-provider/src/main/resources/application.yml
+++ b/sample-order-service/order-provider/src/main/resources/application.yml
@@ -25,48 +25,51 @@ dubbo:
 seata:
   enable: true
   tx-service-group: sample-order-service
-  transport:
-    type: TCP
-    server: NIO
-    hearbeat: true
-    enable-client-batch-send-request: true
-    thread-factory:
-      boss-thread-prefix: NettyBoss
-      worker-thread-prefix: NettyServerNIOWorker
-      server-executor-thread-prefix: NettyServerBizHandler
-      share-boss-worker: false
-      client-selector-thread-prefix: NettyClientSelector
-      client-selector-thread-size: 1
-      client-worker-thread-prefix: NettyClientWorkderThread
-      boss-thread-size: 1
-      workder-thread-size: 8
-    shutdown:
-      wait: 3
-    serialization: seata
-    compressor: none
-  service:
-    vgroup-mapping: default
-    enable-degrade: false
-    disable-global-transaction: false
-    #grouplist: 192.168.6.110:8091
+#  transport:
+#    type: TCP
+#    server: NIO
+#    hearbeat: true
+#    enable-client-batch-send-request: true
+#    thread-factory:
+#      boss-thread-prefix: NettyBoss
+#      worker-thread-prefix: NettyServerNIOWorker
+#      server-executor-thread-prefix: NettyServerBizHandler
+#      share-boss-worker: false
+#      client-selector-thread-prefix: NettyClientSelector
+#      client-selector-thread-size: 1
+#      client-worker-thread-prefix: NettyClientWorkderThread
+#      boss-thread-size: 1
+#      workder-thread-size: 8
+#    shutdown:
+#      wait: 3
+#    serialization: seata
+#    compressor: none
+#  service:
+#    vgroup-mapping: default
+#    enable-degrade: false
+#    disable-global-transaction: false
+#    #grouplist: 192.168.6.110:8091
   client:
-    rm:
-      lock:
-        lock-retry-interval: 10
-        lock-retry-policy-branch-rollback-on-conflict: true
-        lock-retry-times: 30
-    rm-async-commit-buffer-limit: 10000
-    rm-report-retry-count: 5
-    rm-table-meta-check-enable: false
-    rm-report-success-enable: true
-    tm-commit-retry-count: 5
-    tm-rollback-retry-count: 5
-    undo:
-      undo-log-table: undo_log
-      undo-data-validatioin: true
-      undo-log-serialization: jackson
-    log:
-      exception-rate: 100
+#    rm:
+#      lock:
+#        lock-retry-interval: 10
+#        lock-retry-policy-branch-rollback-on-conflict: true
+#        lock-retry-times: 30
+#    rm-async-commit-buffer-limit: 10000
+#    rm-report-retry-count: 5
+#    rm-table-meta-check-enable: false
+#    rm-report-success-enable: true
+#    tm-commit-retry-count: 5
+#    tm-rollback-retry-count: 5
+#    undo:
+#      undo-log-table: undo_log
+#      undo-data-validatioin: true
+#      undo-log-serialization: jackson
+#    log:
+#      exception-rate: 100
+    support:
+      spring:
+        datasource-autoproxy: true
   registry:
     type: nacos
     nacos:
